# fargo

./: Cargo.toml  index.html
fargo-cli/: Cargo.toml
fargo-cli/src/: main.rs
src/: lib.rs
